# ml_article_writer

./: pyproject.toml
article_writer/: __init__.py
article_writer/writer/: __init__.py  gui.py  main.py  model_loader.py
article_writer/writer/templates/: index.html
model_colab/: ml_project.ipynb
